Changed jquery script tag src from http to https

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div id="selectionMarquee" style="top: 147px; left: 296px; height: 0px; width: 0px; display: block;"></div>
 <ol id="all-cords">Boxes so far:
 <li>(573, 198) - (1240, 436)</li></ol>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
 <script>
 $(function () {
 	"use strict";
